--- a/docs/custom-flows/email-password.mdx
+++ b/docs/custom-flows/email-password.mdx
@@ -49,7 +49,7 @@ In the following example, the user is prompted to enter their email address and 
       const handleSubmit = async (e: React.FormEvent) => {
         e.preventDefault();
         if (!isLoaded) return;
-        
+
         // Start the sign-up process using the email and password provided
         try {
           await signUp.create({
@@ -113,7 +113,7 @@ In the following example, the user is prompted to enter their email address and 
           </form>
         )
       }
-      
+
       // Display the initial sign-up form to capture the email and password
       return (
         <form onSubmit={handleSubmit}>
@@ -251,8 +251,8 @@ In the following example, the user is prompted to enter their email address and 
           });
 
           if (completeSignIn.status !== 'complete') {
-            // The status can also be `needs_factor_on', 'needs_factor_two', or 'needs_identifier'
-            // Please see https://clerk.com/docs/references/react/use-sign-in#result-status for  more information
+            // The status can also be `needs_factor_one', 'needs_factor_two', or 'needs_identifier'
+            // Please see https://clerk.com/docs/references/javascript/sign-in/sign-in for more information
             console.log(JSON.stringify(completeSignIn, null, 2));
           }
 
@@ -323,7 +323,7 @@ In the following example, the user is prompted to enter their email address and 
                   });
                 if (signInAttempt.status === "complete") {
                   await setActive({ session: signInAttempt.createdSessionId });
-                  // redirect the user how you see fit.
+                  // Add logic to redirect the user how you see fit.
                 }
                 else {
                   /*Investigate why the sign-in hasn't completed */
