--- a/docs/custom-flows/overview.mdx
+++ b/docs/custom-flows/overview.mdx
@@ -16,17 +16,17 @@ You can build custom sign up and sign in components, or even create a combined u
 
 pYou can build your custom sign up component using the [useSignUp()](/docs/references/react/use-sign-up) hook. The `useSignUp()` hook enables you to build UI to handle any of the sign up methods Clerk offers.
 
-Clerk provides a flexible way to build sign-up flows in your application. You can use a single [`SignUp`][sign-up-ref] object to gather information, verify their email address or phone number, add OAuth accounts, and finally, convert them into a [`User`][user-ref].
+Clerk provides a flexible way to build sign-up flows in your application. You can use a single [`SignUp`](/docs/references/javascript/sign-up/sign-up) object to gather information, verify their email address or phone number, add OAuth accounts, and finally, convert them into a [`User`](/docs/references/javascript/user/user).
 
-Every [`SignUp`][sign-up-ref] has a set of requirements it must meet before it is turned into a [`User`][user-ref]. These requirements are defined by the instance settings you selected in the [Clerk Dashboard](https://dashboard.clerk.com/). Once all requirements are met, the [`SignUp`][sign-up-ref] will turn into a new [`User`][user-ref], and an active session for that [`User`][user-ref] will be created on the current [`Client`][client-ref].
+Every `SignUp` has a set of requirements it must meet before it is turned into a `User`. These requirements are defined by the instance settings you selected in the [Clerk Dashboard](https://dashboard.clerk.com/). Once all requirements are met, the `SignUp` will turn into a new `User`, and an active session for that `User` will be created on the current [`Client`](/docs/references/javascript/client).
 
 Don't worry about collecting all the required fields at once and passing them to a single request. The API is designed to accommodate a progressive sign-up flow, often corresponding to multi-step sign-up forms.
 
 ### Sign-in flow
 
-You can build your custom sign up component using the [useSignIn](/docs/references/react/use-sign-in) hook. With the `useSignIn()` hooks you can replicate the sign in methods Clerk offers and build your own UI to handle the process.
+You can build your custom sign up component using the [`useSignIn()`](/docs/references/react/use-sign-in) hook. With the `useSignIn()` hook, you can replicate the sign in methods Clerk offers and build your own UI to handle the process.
 
-Sign-in's are initiated by creating a [`SignIn`][sign-in-ref] object on the current [`Client`][client-ref]. The [`SignIn`][sign-in-ref] handles all the state and logic associated with a sign-in. If the sign-in is successfully authenticated, it will transform into an active session on the current [`Client`][client-ref].
+Sign-in's are initiated by creating a [`SignIn`](/docs/references/javascript/sign-up/sign-up) object on the current [`Client`](/docs/references/javascript/client). The `SignIn` handles all the state and logic associated with a sign-in. If the sign-in is successfully authenticated, it will transform into an active session on the current `Client`.
 
 #### Completing a sign-in
 
@@ -57,10 +57,3 @@ Do you want to build your own version of the [`<UserProfile />`](/docs/component
 ## Organization Compponents
 
 You can creare your own custom versions of Organization components using the [`useOrganization()`](/docs/references/react/use-organization) and [`useOrganizationList()`](/docs/references/react/use-organization-list) hooks.
-
-
-
-[sign-in-ref]: /docs/references/javascript/sign-in/sign-in
-[sign-up-ref]: /docs/references/javascript/sign-up/sign-up
-[user-ref]: /docs/references/javascript/user/user
-[client-ref]: /docs/references/javascript/client
