--- a/docs/authentication/overview.mdx
+++ b/docs/authentication/overview.mdx
@@ -5,8 +5,7 @@ description: Learn how to configure authentication and user management for your 
 
 # Overview
 
-Clerk supports multiple authentication strategies so that you can implement the strategy that makes sense for *your* users. You can use Clerk's [Account Portal](/docs/account-portal/overview), [pre-built components](/docs/components/overview), or [build your own custom flows](/docs/custom-flows/overview).
-
+Clerk supports multiple authentication strategies so that you can implement the strategy that makes sense for *your* users. You can use Clerk's [Account Portal](/docs/account-portal/overview), [pre-built components](/docs/components/overview), or [build your own custom flows using Clerk's API](/docs/custom-flows/overview).
 
 ## Configuration
 
